# AethelumCoreLite

./: .gitignore  .ignore  CLAUDE.md  LICENSE  MANIFEST.in  PACKAGING.md  README.md  check_dependencies.py  config.example.toml  demo_wal_v2.py  e2e_benchmark.py  issue.md  issue_fix_plan.md  package-lock.json  package.json  performance_benchmark.py  performance_report.txt  pyproject.toml  requirements.txt  setup.py  test-bun.ts  test_message_id_simple.py  test_readme_example.py  test_wal_comparison.py  test_wal_v2_comparison.py  tsconfig.json  tsconfig.test.json  优化计划.md
.claude/skills/: README.md  compile-protobuf.json  format-code.json  git-commit.json  git-status.json  install-dependencies.json  run-example.json  test.json  type-check.json
.cursor/plans/: plan-md_9d7ef496.plan.md
.gitea/: .env.example  README.md
.gitea/docker/: bun-git.Dockerfile
.gitea/docs/: PUBLISHING_TO_GITEA.md
.gitea/scripts/: install_dependencies.py  publish_to_gitea.py  verify_gitea_config.py
.gitea/workflows/: build.yml
.trae/documents/: 修复路由器激活时未创建强制性队列的问题.md
aethelum_core_lite/: __init__.py
aethelum_core_lite/agents/: __init__.py  audit_agent.py
aethelum_core_lite/config/: config_loader.py
aethelum_core_lite/core/: async_queue.py  async_router.py  async_worker.py  async_worker_monitor.py  hooks.py  message.py  openai_client.py  protobuf_schema.proto  protobuf_schema_pb2.py  protobuf_utils.py  queue.py  router.py  worker.py  worker_manager.py  worker_monitor.py  worker_scheduler.py  zhipu_client.py
aethelum_core_lite/deprecated/: queue.py  worker.py  worker_manager.py  worker_scheduler.py
aethelum_core_lite/examples/: README.md  __init__.py  advanced_example.py  basic_example.py  batch_processing_example.py  config.py  config_template.py  main.py  mock_ai_service.py  moral_audit_example.py  single_example.py  test_zhipu_client.py  zhipu_client.py
aethelum_core_lite/examples/agents/: __init__.py  audit_agent.py
aethelum_core_lite/hooks/: __init__.py  base_hook.py  performance_optimizer.py
aethelum_core_lite/monitoring/: metrics_exporter.py  tracing.py
aethelum_core_lite/prompts/: __init__.py
aethelum_core_lite/utils/: __init__.py  error_reporting.py  log_analytics.py  log_level_manager.py  log_performance.py  logging_config.py  validators.py  wal_writer.py
aethelum_core_lite/workers/: ResponseSinkAxonWorker.py
check_101/aethelum_core_lite-1.0.1.dist-info/: METADATA  RECORD
check_101/aethelum_core_lite/agents/: __init__.py
check_101/aethelum_core_lite/api/: metrics_api.py
check_101/aethelum_core_lite/config/: __init__.py
check_101/aethelum_core_lite/core/: __init__.py  async_hooks.py  async_queue.py
check_101/aethelum_core_lite/examples/: __init__.py  custom_hook_example.py  moral_audit_example.py
check_101/aethelum_core_lite/monitoring/: __init__.py
check_101/aethelum_core_lite/utils/: logger.py  unified_validator.py
check_dist/aethelum_core_lite-1.0.0.dist-info/: METADATA  top_level.txt
check_dist/aethelum_core_lite/core/: protobuf_schema_pb2_grpc.py
check_dist/aethelum_core_lite/examples/: basic_example.py
check_dist/aethelum_core_lite/hooks/: hook_chain.py  performance_optimizer.py
check_dist/aethelum_core_lite/utils/: validation_performance.py  validation_rules.py  wal_writer_v2.py
docs/: ASYNCIO_GUIDE.md  MESSAGE_ID_IMPLEMENTATION.md  WAL_V2_IMPROVEMENTS.md  async_enhancement_summary.md  async_p0_completion_report.md  dev-guide.md
examples/: async_example.py  async_queue_enhanced_example.py  async_router_enhanced_example.py  async_worker_enhanced_example.py  basic_flow.ts  phase2_optimization_demo.py  phase4_optimization_demo.py
requirements/: base-lock.txt  base.in  base.txt  dev-lock.txt  dev.in  dev.txt  docs.txt  performance-lock.txt  performance.in
src/api/: index.ts  metrics_api.ts
src/config/: config_loader.ts  index.ts  runtime-schema.ts
src/core/: error_handler.ts  index.ts  message.ts  monitor.ts  queue-factory.ts  queue.ts  router.ts  runtime-builder.ts  worker-factory.ts  worker.ts
src/core/self-refining/: analyzer.ts  index.ts  merger.ts  worker.ts
src/hooks/: chain.ts  index.ts  runtime.ts  types.ts  wal_hook.ts
src/prompts/: index.ts  moral_audit_prompts.ts
src/types/: global.d.ts  index.ts
src/utils/: index.ts  log_analytics.ts  logger.ts  payload_store.ts  structured_logger.ts  unified_validator.ts  validation_performance.ts  wal_writer.ts
temp_extract/aethelum_core_lite/: __init__.py
temp_extract/aethelum_core_lite-1.0.0.dist-info/: RECORD
temp_extract/aethelum_core_lite/api/: __init__.py
temp_extract/aethelum_core_lite/config/: config_loader.py
temp_extract/aethelum_core_lite/core/: async_error_handler.py  async_worker.py  hooks.py  protobuf_utils.py
temp_extract/aethelum_core_lite/deprecated/: router.py  worker_monitor.py
temp_extract/aethelum_core_lite/examples/: advanced_example.py  (+1 more)
test/config/: config_loader.test.ts  runtime-schema.test.ts
test/core/: error_handler.test.ts  message.test.ts  monitor.test.ts  queue.test.ts  router.test.ts  runtime-builder.test.ts  worker.test.ts
test/hooks/: chain.test.ts  runtime.test.ts
test/prompts/: moral_audit_prompts.test.ts
test/utils/: log_analytics.test.ts  logger.test.ts  payload_store.test.ts  structured_logger.test.ts  unified_validator.test.ts  wal_writer.test.ts
tests/: check_dependencies.py  test_async_components.py  test_async_hooks.py  test_async_monitor_enhancements.py  test_async_monitor_p0_methods.py  test_async_p0_features.py  test_async_queue_enhancements.py  test_async_router_enhancements.py  test_async_router_p0_methods.py  test_async_worker_enhancements.py  test_concurrency_basic.py  test_concurrency_safety.py  test_config.py  test_core_components.py  test_message.py  test_performance_benchmark.py  test_quick_verification.py  test_worker_monitor.py  test_worker_scheduler.py
wal_data_v2/Q_AUDITED_INPUT/: log1_000000.wal
wal_data_v2/Q_AUDIT_INPUT/: log1_000000.wal
wal_data_v2/Q_AUDIT_OUTPUT/: log1_000000.wal
wal_data_v2/Q_ERROR/: log1_000000.wal
wal_data_v2/Q_RESPONSE_SINK/: log1_000000.wal
(+4 files in other folders)
